--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 Entregaveis/Entrega_1_RepositorioSemantico/Terminologias/SNOMED/SNOMED-GPS/Versao20221130/SnomedCT_IPSTerminologyRelease_PRODUCTION_20221130T120000Z/Snapshot/Refset/Content/der2_Refset_IPSSimpleSnapshot_IPST_20221130.txt
+Entregaveis/Entrega_1_RepositorioSemantico/Terminologias/SNOMED/SNOMED-GPS/Versao20221130/SnomedCT_IPSTerminologyRelease_PRODUCTION_20221130T120000Z/Snapshot/Refset/Language/der2_cRefset_IPSLanguageSnapshot-en_IPST_20221130.txt
